--- a/.config/i3/config
+++ b/.config/i3/config
@@ -168,7 +168,8 @@ bindsym $mod+Shift+r restart
 # Set shut down, restart and locking features
 bindsym $mod+Shift+e mode "$mode_system"
 # set $mode_system (l)ock, (e)xit, switch_(u)ser, (s)uspend, (h)ibernate, (r)eboot, (Shift+s)hutdown
-set $mode_system (l)ock, (e)xit, (r)eboot, (Shift+s)hutdown
+# set $mode_system (l)ock, (e)xit, (r)eboot, (Shift+s)hutdown
+set $mode_system (l)ock, (e)xit
 mode "$mode_system" {
 	# bindsym l exec --no-startup-id i3exit lock, mode "default"
 	# bindsym s exec --no-startup-id i3exit suspend, mode "default"
@@ -179,8 +180,8 @@ mode "$mode_system" {
 	# bindsym Shift+s exec --no-startup-id i3exit shutdown, mode "default"
 	bindsym l exec --no-startup-id i3lock --color=000000, mode "default"
 	bindsym e exec --no-startup-id i3-msg exit, mode "default"
-	bindsym r exec --no-startup-id reboot, mode "default"
-	bindsym Shift+s exec --no-startup-id shutdown 0, mode "default"
+	# bindsym r exec --no-startup-id reboot, mode "default"
+	# bindsym Shift+s exec --no-startup-id shutdown 0, mode "default"
 
 	# exit system mode: "Enter" or "Escape"
 	bindsym Return mode "default"
@@ -223,7 +224,7 @@ bar {
 
 # Autostarting applications
 exec --no-startup-id flameshot
-exec --no-startup-id picom
+exec --no-startup-id picom --experimental-backends
 exec --no-startup-id parcellite
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec --no-startup-id discord --start-minimized
