adding nitrogen wallpaper restore and more nvim tweaks

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -224,6 +224,7 @@ bar {
 
 # Autostarting applications
 exec --no-startup-id flameshot
+exec --no-startup-id nitrogen --restore
 exec --no-startup-id picom --experimental-backends
 exec --no-startup-id parcellite
 exec --no-startup-id /usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
