made clipboard manager floating

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -340,6 +340,9 @@ bind = $mainModShift, W, exec, firefox
 # Window Rules
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+# Floating clipboard manager
+windowrulev2 = float, class:^(com.github.hluk.copyq)$
+
 # Force Certain Windows to corresponding workspaces
 windowrulev2 = workspace 1, class:^(MiniZinc IDE)(.*)$
 windowrulev2 = workspace 3, class:^(vlc)$|^(org.kde.haruna)$|^(org.kde.kdenlive)$|^(mpv)$
