fixing systray icons not appearing

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,6 +58,7 @@ exec-once = waybar & hyprpaper & nm-applet & dunst & blueman-applet & gammastep-
 exec-once = copyq --start-server &
 exec-once = hypridle &
 exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
+exec-once = xembedsniproxy &    # for some systray icons apparently, don't know why
 
 # necessary applications
 exec-once = /usr/bin/discord --start-minimized &
