fixing issue with launching signal after using kde

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,7 +62,7 @@ exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 # necessary applications
 exec-once = /usr/bin/discord --start-minimized &
 exec-once = keepassxc &
-exec-once = signal-desktop -- &
+exec-once = signal-desktop --password-store="kwallet6" -- &
 exec-once = kdeconnect-indicator &
 exec-once = element-desktop --hidden &
 
