adding transparency to kitty, editing blur settings for hyprland, migrating shadows to new api hyprland

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,6 +57,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = waybar & hyprpaper & nm-applet & dunst & blueman-applet & gammastep-indicator &
 exec-once = copyq --start-server &
 exec-once = hypridle &
+exec-once = hyprctl setcursor Qogir-dark &
 exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 
 # necessary applications
@@ -113,18 +114,19 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 1.0
 
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = $surface0
-    # col.shadow = rgba(1a1a1aee)
+    shadow {
+        enabled  = true
+        range = 4
+        render_power = 3
+        color = $surface0
+        # color = rgba(1a1a1aee)
+    }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
+        size = 8
         passes = 1
-        
         vibrancy = 0.1696
     }
 }
