apparently now the cursor size needs to be set in the config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -57,7 +57,7 @@ exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
 exec-once = waybar & hyprpaper & nm-applet & dunst & blueman-applet & gammastep-indicator &
 exec-once = copyq --start-server &
 exec-once = hypridle &
-exec-once = hyprctl setcursor Qogir-dark &
+exec-once = hyprctl setcursor Qogir-dark 24 &
 exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 
 # necessary applications
