--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -350,7 +350,7 @@ windowrulev2 = workspace 1, class:^(MiniZinc IDE)(.*)$
 windowrulev2 = workspace 3, class:^(vlc)$|^(org.kde.haruna)$|^(org.kde.kdenlive)$|^(mpv)$
 windowrulev2 = workspace 4, class:^(Minecraft)(.*)$
 windowrulev2 = workspace 5, class:^(libreoffice-startcenter)$|^(libreoffice-writer)$|^(libreoffice-impress)$|^(libreoffice-calc)$|^(libreoffice-draw)$|^(libreoffice-math)$
-windowrulev2 = workspace 8, class:^(org.kde.dolphin)$|^(Pcmanfm)$
+windowrulev2 = workspace 8, class:^(org.kde.dolphin)$|^(pcmanfm-qt)$
 windowrulev2 = workspace 10, class:^(Signal)$|^(Element)$|^(discord)$|^(slack)$
 windowrulev2 = workspace special:$magic, title:^(.*)(freeCodeCamp.org Code Radio)(.*)$|^(.*)(YouTube Music)(.*)$
 
