--- a/.config/oh-my-posh/config.toml
+++ b/.config/oh-my-posh/config.toml
@@ -1,8 +1,26 @@
-#:schema https://raw.githubusercontent.com/JanDeDobbeleer/oh-my-posh/main/themes/schema.json
-
-version = 2
-final_space = true
 console_title_template = '{{ .Shell }} in {{ .Folder }}'
+version = 3
+final_space = true
+
+[palette]
+  blue = '#89B4FA'
+  lavender = '#B4BEFE'
+  mauve = '#CBA6F7'
+  pink = '#F5C2E7'
+  red = '#F38BA8'
+  teal = '#94E2D5'
+  text = '#CDD6F4'
+  yellow = '#F9E2AF'
+
+[secondary_prompt]
+  template = '❯❯ '
+  foreground = 'p:lavender'
+  background = 'transparent'
+
+[transient_prompt]
+  template = '{{now | date "15:04:05"}} ❯ '
+  background = 'transparent'
+  foreground_templates = ['{{if gt .Code 0}}p:red{{end}}', '{{if eq .Code 0}}p:lavender{{end}}']
 
 [[blocks]]
   type = 'prompt'
@@ -10,66 +28,59 @@ console_title_template = '{{ .Shell }} in {{ .Folder }}'
   newline = true
 
   [[blocks.segments]]
+    template = '{{ .CurrentDate | date .Format }}'
+    foreground = 'p:teal'
     type = 'time'
     style = 'plain'
-    foreground = 'p:teal'
-    template = "{{ .CurrentDate | date .Format }}"
-
-  # [[blocks.segments]]
-  #   type = 'session'
-  #   style = 'plain'
-  #   foreground = 'p:teal'
-  #   template = '{{ .UserName }}'
-
-  [[blocks.segments]]
-    type = 'text'
-    style = 'plain'
-    foreground = 'p:text'
-    template = ' in '
-
-  [[blocks.segments]]
-    type = 'path'
-    style = 'plain'
-    foreground = 'p:blue'
-    template = '{{ .Path }} '
 
     [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = ' in '
+    foreground = 'p:text'
+    type = 'text'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
+
+  [[blocks.segments]]
+    template = '{{ .Path }} '
+    foreground = 'p:blue'
+    type = 'path'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
       style = 'full'
 
   [[blocks.segments]]
-    type = 'git'
-    style = 'plain'
+    template = '{{ .HEAD }}{{ if (.Working.Changed) }}*{{ end }}{{ if (.Staging.Changed) }}+{{ end }} {{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}'
     foreground = 'p:mauve'
     background = 'transparent'
-    template = "{{ .HEAD }}{{ if (.Working.Changed) }}*{{ end }}{{ if (.Staging.Changed) }}+{{ end }} {{ if gt .Behind 0 }}⇣{{ end }}{{ if gt .Ahead 0 }}⇡{{ end }}"
+    type = 'git'
+    style = 'plain'
 
     [blocks.segments.properties]
       branch_icon = ''
+      cache_duration = 'none'
       commit_icon = '@'
       fetch_status = true
-
-    # [blocks.segments.properties]
-    #   branch_icon = ' '
-    #   cherry_pick_icon = ' '
-    #   commit_icon = ' '
-    #   fetch_status = false
-    #   fetch_upstream_icon = false
-    #   merge_icon = ' '
-    #   no_commits_icon = ' '
-    #   rebase_icon = ' '
-    #   revert_icon = ' '
-    #   tag_icon = ' '
 
 [[blocks]]
   type = 'rprompt'
   overflow = 'hidden'
 
   [[blocks.segments]]
-    type = 'executiontime'
-    style = 'plain'
+    template = '{{ .FormattedMs }}'
     foreground = 'yellow'
     background = 'transparent'
-    template = '{{ .FormattedMs }}'
+    type = 'executiontime'
+    style = 'plain'
+
+    [blocks.segments.properties]
+      cache_duration = 'none'
 
 [[blocks]]
   type = 'prompt'
@@ -77,34 +88,10 @@ console_title_template = '{{ .Shell }} in {{ .Folder }}'
   newline = true
 
   [[blocks.segments]]
+    template = ''
     type = 'text'
     style = 'plain'
-    foreground_templates = [
-      "{{if gt .Code 0}}p:red{{end}}",
-      "{{if eq .Code 0}}p:lavender{{end}}",
-    ]
-    template = ''
+    foreground_templates = ['{{if gt .Code 0}}p:red{{end}}', '{{if eq .Code 0}}p:lavender{{end}}']
 
-[transient_prompt]
-  foreground_templates = [
-    "{{if gt .Code 0}}p:red{{end}}",
-    "{{if eq .Code 0}}p:lavender{{end}}",
-  ]
-  background = 'transparent'
-  template = '{{now | date "15:04:05"}} ❯ '
-
-[secondary_prompt]
-  foreground = 'p:lavender'
-  background = 'transparent'
-  template = '❯❯ '
-
-[palette]
-  pink = '#F5C2E7'
-  mauve = '#CBA6F7'
-  red = '#F38BA8'
-  yellow = '#F9E2AF'
-  teal = '#94E2D5'
-  blue = '#89B4FA'
-  lavender = '#B4BEFE'
-  text = '#CDD6F4'
-
+    [blocks.segments.properties]
+      cache_duration = 'none'
