making exec files nix friendly

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -54,14 +54,19 @@ $menu = rofi -show drun
 
 # necessary processes
 exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
-exec-once = waybar & hyprpaper & nm-applet & dunst & blueman-applet & gammastep-indicator &
+exec-once = waybar &
+exec-once = hyprpaper &
+exec-once = nm-applet &
+exec-once = dunst &
+exec-once = blueman-applet &
+exec-once = gammastep-indicator &
 exec-once = copyq --start-server &
 exec-once = hypridle &
-exec-once = hyprctl setcursor Qogir-dark 24 &
+exec-once = hyprctl setcursor Qogir-dark &
 exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 
 # necessary applications
-exec-once = /usr/bin/discord --start-minimized &
+exec-once = discord --start-minimized &
 exec-once = keepassxc &
 exec-once = signal-desktop --password-store="kwallet6" -- &
 exec-once = kdeconnect-indicator &
