--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 # necessary processes
-exec-once = /usr/lib/polkit-kde-authentication-agent-1 &
+exec-once = systemctl --user start hyprpolkitagent
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = nm-applet &
