fixing hyprcursor size (again)

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,7 +62,7 @@ exec-once = blueman-applet &
 exec-once = gammastep-indicator &
 exec-once = copyq --start-server &
 exec-once = hypridle &
-exec-once = hyprctl setcursor Qogir-dark &
+exec-once = hyprctl setcursor Qogir-dark 24 &
 exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 
 # necessary applications
