--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -68,7 +68,7 @@ exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 # necessary applications
 exec-once = discord --start-minimized &
 exec-once = keepassxc &
-exec-once = signal-desktop --password-store="kwallet6" -- &
+exec-once = signal-desktop -- &
 exec-once = kdeconnect-indicator &
 exec-once = element-desktop --hidden &
 
