apparently hyprpolkit isn't working properly, sticking with lxqt polkit for now

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 # necessary processes
-exec-once = systemctl --user start hyprpolkitagent
+exec-once = lxqt-policykit-agent &
 exec-once = waybar &
 exec-once = hyprpaper &
 exec-once = nm-applet &
