--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -153,7 +153,7 @@
             "car": "",
             "default": ["", "", ""]
         },
-        "on-click": "pavucontrol"
+        "on-click": "pwvucontrol"
     },
     "power-profiles-daemon": {
         "format": "{icon}",
