--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -174,6 +174,7 @@
             "cpu",
             "memory",
             "disk",
+            "disk#home",
             "temperature"
         ]
     },
@@ -197,6 +198,11 @@
         "interval": 30,
         "format": " {percentage_used}%",
         "path": "/"
+    },
+    "disk#home": {
+        "interval": 30,
+        "format": " {percentage_used}%",
+        "path": "/home"
     },
     "temperature": {
         // "thermal-zone": 2,
