better icon for home directory storage

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -201,7 +201,7 @@
     },
     "disk#home": {
         "interval": 30,
-        "format": " {percentage_used}%",
+        "format": " {percentage_used}%",
         "path": "/home"
     },
     "temperature": {
