removed album name from mpris plugin and gave title more space

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -54,6 +54,7 @@
     "mpris": {
         "format": "{player_icon} {dynamic}",
         "format-paused": "{status_icon} <i>{dynamic}</i>",
+        "dynamic-order": ["title", "artist", "position", "length"],
         "player-icons": {
             "mpv": "🎵",
             "spotify": "",
@@ -62,7 +63,7 @@
         "status-icons": {
             "paused": ""
         },
-        "title-len" : 15
+        "title-len" : 20
     },
     "group/time-date-weather": {
         "orientation": "inherit",
