made wallpapers stay in home folder

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
-preload = /usr/share/backgrounds/Photo of Valley.jpg
-preload = /usr/share/backgrounds/Morskie Oko.jpg
+preload = $HOME/my-wallpaper-collection/Photo of Valley.jpg
+preload = $HOME/my-wallpaper-collection/Morskie Oko.jpg
 
-wallpaper = HDMI-A-1, /usr/share/backgrounds/Photo of Valley.jpg
-wallpaper = eDP-1, /usr/share/backgrounds/Morskie Oko.jpg
+wallpaper = HDMI-A-1, $HOME/my-wallpaper-collection/Photo of Valley.jpg
+wallpaper = eDP-1, $HOME/my-wallpaper-collection/Morskie Oko.jpg
 
 splash = false
 ipc = off
