fixed signal's class issue and added slack to autostart while fixing its class as well

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -69,6 +69,7 @@ exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 exec-once = discord --start-minimized &
 exec-once = keepassxc &
 exec-once = signal-desktop -- &
+exec-once = slack &
 exec-once = kdeconnect-indicator &
 exec-once = element-desktop --hidden &
 
@@ -356,7 +357,7 @@ windowrulev2 = workspace 3, class:^(vlc)$|^(org.kde.haruna)$|^(org.kde.kdenlive)
 windowrulev2 = workspace 4, class:^(Minecraft)(.*)$
 windowrulev2 = workspace 5, class:^(libreoffice-startcenter)$|^(libreoffice-writer)$|^(libreoffice-impress)$|^(libreoffice-calc)$|^(libreoffice-draw)$|^(libreoffice-math)$
 windowrulev2 = workspace 8, class:^(org.kde.dolphin)$|^(pcmanfm-qt)$
-windowrulev2 = workspace 10, class:^(Signal)$|^(Element)$|^(discord)$|^(slack)$
+windowrulev2 = workspace 10, class:^(signal)$|^(Signal)$|^(Element)$|^(discord)$|^(slack)$|^(Slack)$
 windowrulev2 = workspace special:$magic, title:^(.*)(freeCodeCamp.org Code Radio)(.*)$|^(.*)(YouTube Music)(.*)$
 
 # Workspace Rules
