slack start minimized

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -69,7 +69,7 @@ exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 exec-once = discord --start-minimized &
 exec-once = keepassxc &
 exec-once = signal-desktop -- &
-exec-once = slack &
+exec-once = slack -u &
 exec-once = kdeconnect-indicator &
 exec-once = element-desktop --hidden &
 
