removed autolaunching for things managed as a service in nixos

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -55,15 +55,17 @@ $menu = rofi -show drun
 # necessary processes
 exec-once = lxqt-policykit-agent &
 exec-once = waybar &
-exec-once = hyprpaper &
 exec-once = nm-applet &
 exec-once = dunst &
 exec-once = blueman-applet &
-exec-once = gammastep-indicator &
 exec-once = copyq --start-server &
-exec-once = hypridle &
 exec-once = hyprctl setcursor Qogir-dark 24 &
-exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
+# exec-once = /usr/lib/pam_kwallet_init & # for minecraft :) official minecraft client doesn't work on nixos
+
+# autostarted by nixos, so no need to explicitly run it
+# exec-once = gammastep-indicator &
+# exec-once = hypridle &
+# exec-once = hyprpaper &
 
 # necessary applications
 exec-once = discord --start-minimized &
