added back flameshot keybinds

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -326,10 +326,10 @@ bind = , XF86AudioNext, exec, playerctl next
 bind = $mainMod, V, exec, copyq toggle
 
 # keybindings for screenshot TODO replace with flameshot when it is released
-bind = , Print, exec, grim - | wl-copy
-bind = $mainMod, Print, exec, grim
-bind = $mainModShift, Print, exec, grim -g "$(slurp -d)"
-bind = $mainModShift, S, exec, grim -g "$(slurp -d)" - | wl-copy
+bind = , Print, exec, flameshot screen --clipboard
+bind = $mainMod, Print, exec, flameshot screen --path $HOME/Pictures/Screenshots
+bind = $mainModShift, Print, exec, flameshot full --path $HOME/Pictures/Screenshots
+bind = $mainModShift, S, exec, flameshot gui
 
 # Application Bindings
 bind = $mainModShift, W, exec, firefox
