--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -59,7 +59,6 @@ exec-once = nm-applet &
 exec-once = dunst &
 exec-once = blueman-applet &
 exec-once = copyq --start-server &
-exec-once = hyprctl setcursor Qogir-dark 24 &
 # exec-once = /usr/lib/pam_kwallet_init & # for minecraft :) official minecraft client doesn't work on nixos
 
 # autostarted by nixos, so no need to explicitly run it
@@ -364,8 +363,8 @@ windowrulev2 = workspace special:$magic, title:^(.*)(freeCodeCamp.org Code Radio
 
 # Workspace Rules
 # Workspace Between Monitors and Setting Names
-workspace = 1, monitor:$externalMonitor, defaultName:1 
-workspace = 2, monitor:$externalMonitor, defaultName:2 , default:true
+workspace = 1, monitor:$externalMonitor, defaultName:1 , default:true
+workspace = 2, monitor:$externalMonitor, defaultName:2 
 workspace = 3, monitor:$externalMonitor, defaultName:3 
 workspace = 4, monitor:$externalMonitor, defaultName:4 
 workspace = 5, monitor:$externalMonitor, defaultName:5 󰈙
