fixing default workspaces, and removing setcursor since nix config takes care of that

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -62,7 +62,6 @@ exec-once = blueman-applet &
 exec-once = gammastep-indicator &
 exec-once = copyq --start-server &
 exec-once = hypridle &
-exec-once = hyprctl setcursor Qogir-dark 24 &
 exec-once = /usr/lib/pam_kwallet_init & # for minecraft :)
 
 # necessary applications
@@ -362,8 +361,8 @@ windowrulev2 = workspace special:$magic, title:^(.*)(freeCodeCamp.org Code Radio
 
 # Workspace Rules
 # Workspace Between Monitors and Setting Names
-workspace = 1, monitor:$externalMonitor, defaultName:1 
-workspace = 2, monitor:$externalMonitor, defaultName:2 , default:true
+workspace = 1, monitor:$externalMonitor, defaultName:1 , default:true
+workspace = 2, monitor:$externalMonitor, defaultName:2 
 workspace = 3, monitor:$externalMonitor, defaultName:3 
 workspace = 4, monitor:$externalMonitor, defaultName:4 
 workspace = 5, monitor:$externalMonitor, defaultName:5 󰈙
