reconfigured monitors with best values, decreased scaling for laptops again, and put grim back instead of flameshot since multi-resolutions multi monitor is still an issue

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -28,8 +28,8 @@ source = ~/.config/hypr/mocha.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
 $laptopMonitor = eDP-1
 $externalMonitor = HDMI-A-1
-monitor = $externalMonitor, 2560x1440@144.00Hz, -2560x0, 1
-monitor = $laptopMonitor, 1920x1080@120.00Hz, 0x0, 1.25
+monitor = $laptopMonitor, highres@highrr, 0x0, 1
+monitor = $externalMonitor, highres@highrr, auto-left, 1
 monitor = , preferred, auto, 1
 
 
@@ -322,11 +322,10 @@ bind = , XF86AudioNext, exec, playerctl next
 # keybindings for clipboard
 bind = $mainMod, V, exec, copyq toggle
 
-# keybindings for screenshot TODO replace with flameshot when it is released
-bind = , Print, exec, flameshot screen --clipboard
-bind = $mainMod, Print, exec, flameshot screen --path $HOME/Pictures/Screenshots
-bind = $mainModShift, Print, exec, flameshot full --path $HOME/Pictures/Screenshots
-bind = $mainModShift, S, exec, flameshot gui
+# keybindings for screenshot TODO replace with flameshot when scaling bug is fixed
+bind = , Print, exec, grim -g "$(slurp -d)"
+bind = $mainMod, Print, exec, grim
+bind = $mainModShift, S, exec, grim -g "$(slurp -d)" - | wl-copy
 
 # Application Bindings
 bind = $mainModShift, W, exec, firefox
