copyq is now a home-manager service

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -58,13 +58,13 @@ exec-once = waybar &
 exec-once = nm-applet &
 exec-once = dunst &
 exec-once = blueman-applet &
-exec-once = copyq --start-server &
 # exec-once = /usr/lib/pam_kwallet_init & # for minecraft :) official minecraft client doesn't work on nixos
 
 # autostarted by nixos, so no need to explicitly run it
 # exec-once = gammastep-indicator &
 # exec-once = hypridle &
 # exec-once = hyprpaper &
+# exec-once = copyq --start-server &
 
 # necessary applications
 exec-once = discord --start-minimized &
