changed default browser to qutebrowser

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -328,7 +328,7 @@ bind = $mainMod, Print, exec, grim
 bind = $mainModShift, S, exec, grim -g "$(slurp -d)" - | wl-copy
 
 # Application Bindings
-bind = $mainModShift, W, exec, firefox
+bind = $mainModShift, W, exec, qutebrowser
 
 ##############################
 ### WINDOWS AND WORKSPACES ###
