changed the wallpaper (no big deal)

--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,8 +1,8 @@
-preload = $HOME/my-wallpaper-collection/Photo of Valley.jpg
-preload = $HOME/my-wallpaper-collection/Morskie Oko.jpg
+preload = $HOME/my-wallpaper-collection/canon/IMG_9889.JPG
+preload = $HOME/my-wallpaper-collection/canon/IMG_9928.JPG
 
-wallpaper = HDMI-A-1, $HOME/my-wallpaper-collection/Photo of Valley.jpg
-wallpaper = eDP-1, $HOME/my-wallpaper-collection/Morskie Oko.jpg
+wallpaper = HDMI-A-1, $HOME/my-wallpaper-collection/canon/IMG_9889.JPG
+wallpaper = eDP-1, $HOME/my-wallpaper-collection/canon/IMG_9928.JPG
 
 splash = false
 ipc = off
