--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -55,7 +55,7 @@
         "format-paused": "{status_icon} <i>{dynamic}</i>",
         "dynamic-order": ["title", "artist", "position", "length"],
         "player-icons": {
-            "mpv": "🎵",
+            "mpv": "",
             "spotify": "",
             "default": ""
         },
@@ -115,15 +115,16 @@
         // "scroll-step": 1, // %, can be a float
         "format": "{icon} {volume}% {format_source}",
         "format-bluetooth": "{icon} {volume}% {format_source}",
-        "format-bluetooth-muted": "{icon}  {format_source}",
-        "format-muted": " {format_source}",
+        "format-bluetooth-muted": "{icon} 󰝟 {format_source}",
+        "format-muted": "󰝟 {format_source}",
         "format-source": " {volume}%",
         "format-source-muted": "",
         "format-icons": {
             "headphone": "",
-            "hands-free": "",
-            "headset": "",
+            "hands-free": "󱡏",
+            "headset": "",
             "phone": "",
+            "phone-muted": "",
             "portable": "",
             "car": "",
             "default": ["", "", ""]
@@ -167,7 +168,7 @@
     },
     "disk#home": {
         "interval": 30,
-        "format": " {percentage_used}%",
+        "format": " {percentage_used}%",
         "path": "/home"
     },
     "temperature": {
@@ -191,12 +192,12 @@
         },
         "format": "{icon} {capacity}%",
         "format-full": "{icon} {capacity}%",
-        "format-charging": " {capacity}%",
+        "format-charging": "󰂄 {capacity}%",
         "format-plugged": " {capacity}%",
         "format-alt": "{icon} {time}",
         // "format-good": "", // An empty format will hide the module
         // "format-full": "",
-        "format-icons": ["", "", "", "", ""]
+        "format-icons": ["󰂎", "󰁻", "󰁾", "󰂁", "󱟢"]
     },
     // "battery#bat2": {
     //     "bat": "BAT2"
