changed the font to IBM Plex font, correcting the remaining stuff

--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@ source = $HOME/.config/hypr/mocha.conf
 
 $accent = $mauve
 $accentAlpha = $mauveAlpha
-$font = Fira Code Nerd Font
+$font = IBM Plex Mono
 
 # GENERAL
 general {
