fixed the hyprland magic/scratch workspace logo

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -287,7 +287,7 @@ bind = $mainModShift, 9, movetoworkspace, 9
 bind = $mainModShift, 0, movetoworkspace, 10
 
 # Example special workspace (scratchpad)
-$magic = 
+$magic = 󱡄
 bind = $mainMod, Space, togglespecialworkspace, $magic
 bind = $mainModShift, Space, movetoworkspace, special:$magic
 
