--- a/.config/hypr/hyprlock.conf
+++ b/.config/hypr/hyprlock.conf
@@ -2,7 +2,7 @@ source = $HOME/.config/hypr/mocha.conf
 
 $accent = $mauve
 $accentAlpha = $mauveAlpha
-$font = IBM Plex Mono
+$font = BlexMono Nerd Font
 
 # GENERAL
 general {
