--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -97,7 +97,7 @@ general {
     border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
-    col.active_border = $green
+    col.active_border = $teal $lavender 45deg
     # col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
     col.inactive_border = $surface0
     # col.inactive_border = rgba(595959aa)
