--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -53,7 +53,7 @@ $menu = rofi -show drun
 # Or execute your favorite apps at launch like this:
 
 # necessary processes
-exec-once = lxqt-policykit-agent &
+# exec-once = lxqt-policykit-agent & # using hyprpolkitagent in nix config
 exec-once = waybar &
 exec-once = nm-applet &
 exec-once = dunst &
